--- a/PaginaLista.html
+++ b/PaginaLista.html
@@ -2,58 +2,69 @@
 
 {MODAL_EXCLUIR}
 
-<div id="wrapper">
-<div id="page-content-wrapper">
-<div class="container-fluid">
-<div class="row">
-<div class="col-lg-12">	
+<body>
+    <div id="wrapper">
+        <div id="page-wrapper">
+            <div class="container-fluid">
 
-{ALERTA}
+                <!-- Page Heading -->
+                <div class="row">
+                    <div class="col-lg-12">                        
 
-<div class="panel panel-info">
-	<div class="panel-heading clearfix">							
-		<a class="btn btn-success pull-right" href="{LINK_INCLUIR}">Incluir</a>
-		<button type="button" class="btn btn-info pull-right" style="margin-right: 5px;" 
-				data-toggle="modal" data-target="#myModal">Filtrar</button>
-		<h3 class="panel-title" style="padding-top: 7.5px;">{NOME_LISTA}</h3>
-	</div>
-	<div class="panel-body">
-		<table id="myTable" class="table table-striped table-bordered table-hover tablesorter">    	
-			<thead>
-				{TABELA_TITULOS}
-			</thead>			
-			<tbody>	
-				<!-- BEGIN BLOCK_REGISTROS -->
-				<tr>	      				
-  					{TABELA_CAMPOS}	      				
-  					<td>
-  						<a class="btn btn-warning btn-xs" href="{LINK_EDITAR}">Editar</a>						
-						<a href="#" class="confirm-delete btn btn-danger btn-xs" data-href="{LINK_EXCLUIR}" data-toggle="modal" data-target="#confirm-delete" data-id="{REG_ID}">Excluir</a>	
-  					</td>
-				</tr>			
-				<!-- END BLOCK_REGISTROS -->
-			</tbody>	
-		</table>
+                        <h1 class="page-header">
+                            {NOME_LISTA}
+                            <small>Lista</small>
+                        </h1>
 
-		{TXT_REGISTROS}		
+                        {ALERTA}
+                        
+                        <ol class="breadcrumb">
+                            <li>
+                                <i class="fa fa-home"></i> <a href="{PATH}">Home</a>
+                            </li>
+                            <li class="active">
+                                <i class="fa fa-folder-open"></i> {NOME_LISTA}
+                            </li>
+                        </ol>     
 
-		{PAGINACAO}
-	</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+                        <table id="myTable" class="table table-striped table-bordered table-hover tablesorter">     
+                        <thead>
+                            {TABELA_TITULOS}
+                        </thead>            
+                        <tbody> 
+                            <!-- BEGIN BLOCK_REGISTROS -->
+                            <tr>                        
+                                {TABELA_CAMPOS}                     
+                                <td>
+                                    <a class="btn btn-warning btn-xs" href="{LINK_EDITAR}">Editar</a>                       
+                                    <a href="#" class="confirm-delete btn btn-danger btn-xs" data-href="{LINK_EXCLUIR}" data-toggle="modal" data-target="#confirm-delete" data-id="{REG_ID}">Excluir</a>    
+                                </td>
+                            </tr>           
+                            <!-- END BLOCK_REGISTROS -->
+                        </tbody>    
+                        </table>
+
+                        {TXT_REGISTROS}     
+
+                        {PAGINACAO}
+                    </div>
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container-fluid -->
+        </div>
+        <!-- /#page-wrapper -->
+    </div>    
+</body>
 <script type="text/javascript">
-	$(document).ready(function() { 
+    $(document).ready(function() { 
         $("#myTable").tablesorter({headers: { {COL_ACTIONS}: { sorter: false} }}); 
     } 
 ); 
 </script>
 <script>
-	$('#confirm-delete').on('show.bs.modal', function(e) {
-		$(this).find('.btn-ok').attr('href', $(e.relatedTarget).data('href'));
-		//$('.debug-url').html('Delete URL: <strong>' + $(this).find('.btn-ok').attr('href') + '</strong>');
-	});
+    $('#confirm-delete').on('show.bs.modal', function(e) {
+        $(this).find('.btn-ok').attr('href', $(e.relatedTarget).data('href'));
+        //$('.debug-url').html('Delete URL: <strong>' + $(this).find('.btn-ok').attr('href') + '</strong>');
+    });
 </script>
