--- a/PaginaLista.html
+++ b/PaginaLista.html
@@ -11,7 +11,7 @@
                     {ALERTA}
 
                     {BREADCRUMBS}
-                    
+
                     <div class="panel panel-default">
                         <div class="panel-heading clearfix">
                             <h3 class="panel-title"><strong>{NOME_LISTA}</strong></h3>
@@ -25,14 +25,14 @@
                             </label>
 
                             <label style="margin-left: 10px;">Pesquisar
-                               <input type="text" name="pesquisar" class="form-control input-sm" id="pesquisar" value="{TXT_FILTRO}" 
+                               <input type="text" name="pesquisar" class="form-control input-sm" id="pesquisar" value="{TXT_FILTRO}"
                                onchange="changePesquisarFunc(value);">
-                            </label> 
+                            </label>
 
                             <a class="btn btn-success pull-right" href="{LINK_INCLUIR}">Incluir</a>
-                            <button type="button" class="btn btn-info pull-right" style="margin-right: 5px; margin-bottom: 10px;" data-toggle="modal" data-target="#myModal">Filtrar</button>
+                            <button type="button" class="btn btn-info pull-right" style="margin-right: 5px; margin-bottom: 10px;" data-toggle="modal" data-target="#myModal"><i class="fa fa-filter"></i> Filtros</button>
                         </form>
-                        
+
                         <table class="table table-striped table-bordered table-hover table-condensed tablesorter" id="myTable">
                         <thead>
                             {TABELA_TITULOS}
@@ -42,7 +42,7 @@
                             <tr>
                                 {TABELA_CAMPOS}
                                 <td>
-                                    <a class="btn btn-warning btn-xs" href="{LINK_EDITAR}">Editar</a>                       
+                                    <a class="btn btn-warning btn-xs" href="{LINK_EDITAR}">Editar</a>
                                     <a href="#" class="confirm-delete btn btn-danger btn-xs" data-href="{LINK_EXCLUIR}" data-toggle="modal" data-target="#confirm-delete" data-id="{REG_ID}">Excluir</a>
                                 </td>
                             </tr>
@@ -52,15 +52,15 @@
 
                         {PAGINACAO}
                         {TXT_REGISTROS}
-                    </div>                    
-                </div>                
-            </div>            
-        </div>        
-    </div>    
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 <script type="text/javascript">
-    function changeFunc($i) 
+    function changeFunc($i)
     {
         var controller = $("body[id^=index]").attr("controller");
         changeTable({'_controller': controller, '_linhas': $i});
@@ -68,7 +68,7 @@
 </script>
 
 <script type="text/javascript">
-    function changePesquisarFunc($txt) 
+    function changePesquisarFunc($txt)
     {
         var controller = $("body[id^=index]").attr("controller");
         changeTable({'_controller': controller, '_pesquisa': $txt});
@@ -76,12 +76,12 @@
 </script>
 
 <script type="text/javascript">
-    $('#myTable th').click(function() 
+    $('#myTable th').click(function()
     {
         var nome = $(this).attr("id");
         if (nome == 'actions') return;
 
-        var desc = $(this).attr("data_aux");        
+        var desc = $(this).attr("data_aux");
         if (desc == 'DESC') {
             desc = "ASC"
         } else {
@@ -89,15 +89,15 @@
         };
         $(this).attr("data_aux", desc);
 
-        var nLinhas = $('#selectNrLinhas').val(); 
+        var nLinhas = $('#selectNrLinhas').val();
         var controller = $("body[id^=index]").attr("controller");
 
-        changeTable({'_controller': controller, '_linhas': nLinhas, '_orderBy': nome, '_orderAD': desc});      
+        changeTable({'_controller': controller, '_linhas': nLinhas, '_orderBy': nome, '_orderAD': desc});
     });
 </script>
 
 <script>
     $('#confirm-delete').on('show.bs.modal', function(e) {
-        $(this).find('.btn-ok').attr('href', $(e.relatedTarget).data('href'));        
+        $(this).find('.btn-ok').attr('href', $(e.relatedTarget).data('href'));
     });
 </script>
