--- a/PaginaLista.html
+++ b/PaginaLista.html
@@ -33,7 +33,7 @@
                             <button type="button" class="btn btn-info pull-right" style="margin-right: 5px; margin-bottom: 10px;" data-toggle="modal" data-target="#myModal"><i class="fa fa-filter"></i> Filtros</button>
                         </form>
 
-                        <table class="table table-striped table-bordered table-hover table-condensed tablesorter" id="myTable">
+                        <table class="table table-striped table-bordered table-hover table-condensed" id="myTable">
                         <thead>
                             {TABELA_TITULOS}
                         </thead>
