--- a/PaginaLista.html
+++ b/PaginaLista.html
@@ -24,6 +24,7 @@
                 <label style="margin-left: 10px;">Pesquisar
                    <input type="text" name="pesquisar" class="form-control input-sm" id="pesquisar" value="{TXT_FILTRO}"
                    onchange="changePesquisar(value);">
+                   {NRREG_FILTER}
                 </label>
 
                 <a class="btn btn-success pull-right" href="{LINK_INCLUIR}">Incluir</a>
